[package]
name = "projh"
version = "0.0.1"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pjh"
path = "src/main.rs"

[dependencies]
flate2 = { version = "1.0.14", features = ["zlib"], default-features = false }
serde = { version = "1.0.105", features = ["derive"] }
bincode = "1.2.1"
twox-hash = "1.5.0"
itertools = "0.9.0"
crossbeam = "0.7.3"
snap = "1"
rayon = "1.3.0"
indicatif = "0.14.0"
sled = "0.31.0"
zerocopy = "0.3.0"
byteorder = "1.3.4"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }

[profile.release]
opt-level = 3
lto = true
